# pipette

./: .gitignore  CMakeLists.txt  gemtxt.h  main.cpp  readme.md  util.h
include/kissnet/: kissnet.hpp
include/raylib/: raygui.h  raylib.h
lib/raylib/: README.md
lib/raylib/examples/: examples_template.c
lib/raylib/examples/audio/: audio_module_playing.c  audio_multichannel_sound.c  audio_music_stream.c  audio_raw_stream.c  audio_sound_loading.c
lib/raylib/examples/core/: core_2d_camera.c  core_2d_camera_platformer.c  core_3d_camera_first_person.c  core_3d_camera_free.c  core_3d_camera_mode.c  core_3d_picking.c  core_basic_screen_manager.c  core_basic_window.c  core_basic_window_web.c  core_custom_frame_control.c  core_custom_logging.c  core_drop_files.c  core_input_gamepad.c  core_input_gestures.c  core_input_keys.c  core_input_mouse.c  core_input_mouse_wheel.c  core_input_multitouch.c  core_loading_thread.c  core_quat_conversion.c  core_random_values.c  core_scissor_test.c  core_smooth_pixelperfect.c  core_split_screen.c  core_storage_values.c  core_vr_simulator.c  core_window_flags.c  core_window_letterbox.c  core_world_screen.c
lib/raylib/examples/models/: models_animation.c  models_billboard.c  models_box_collisions.c  models_cubicmap.c  models_first_person_maze.c  models_geometric_shapes.c  models_heightmap.c  models_loading.c  models_loading_gltf.c  models_loading_vox.c  models_mesh_generation.c  models_mesh_picking.c  models_skybox.c  (+4 more)
lib/raylib/parser/: raylib_api.json  raylib_api.txt  raylib_api.xml
lib/raylib/src/: raylib.h  rcore.c  rtext.c
(+84 files in other folders)
